# fuel_prices

./: .gitignore  README.md  database_config.yaml  main.py  pyproject.toml
.github/workflows/: fuel_scraper.yml  scrape.yml
