[project]
name = "fuel-prices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "resend>=2.30.1",
    "supabase>=2.30.0",
]
